<resources>
    <string name="app_name">Assignment5</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="tv_name_studentList">Name</string>
    <string name="tv_rollNo_studentList">RollNo</string>
    <string name="tv_class_studentList">Class</string>


    <string name="btn_menu_studentList1">Sort By Name</string>
    <string name="btn_menu_studentList2">Sort By RollNo</string>

    <string name="btn_addStudent_studentList">Add Student</string>

    <string name="exception">PLease enter all fields</string>
    <string name="et_hint_name_studentDetails">Name</string>
    <string name="et_hint_rollNo_studentDetails">RollNo</string>
    <string name="et_hint_class_studentDetails">Class</string>

    <string name="btn_submit_studentDetails">Submit</string>
    <string name="tv_Nodata_studentList">No Data Found</string>
    <string name="validName">Please Enter Valid Name</string>
    <string name="validRollno">PlaseEnter Valid Rollno</string>
    <string name="addStudent">Add Student</string>
    <string name="update">Database Updated</string>
    <string name="services">Services</string>
    <string name="IntentServices">Intent Services</string>
    <string name="Async">Async</string>


    <string name="Alert_options">DataBase Options</string>
    <string name="error">Error</string>
    <string name="Alert_delete">Async </string>

    <string name="ALert_update"></string>
    <string name="Alert_view">VIEW</string>


    <string name="validation_etAlpha_studentDetails">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefgjijklmnopqrstuvwxyz</string>
    <string name="validation_etNum_studentDetails">1234567890</string>


    <string name="helperClass_toastName">Please Enter name</string>
    <string name="helperClass_toastRoll">Please Enter RollNo</string>
    <string name="helperClass_toastClass">Please Enter CLass</string>

    <string name="name">Name</string>
    <string name="rollNO">RollNo</string>
    <string name="Class">Class</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="viewpager1">Student StudentList</string>
    <string name="viewPager2">Add/Update Student StudentList</string>
    <string name="addIt">addIt</string>
    <string name="updateIt">updateIt</string>v
    <string name="deleteIt">DeleteIt</string>

    <string name="tag">android:switcher:</string>

    <string name="title">Choose from options</string>
    <string name="options">Options</string>
    <string name="Delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="addtoDatabase">Added to Database</string>



    <string-array name="Dialog_Operations">
        <item>View</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>
