<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Fragments.AddStudentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_gravity="center"

        android:orientation="vertical">
        <EditText
            android:id="@+id/et_name_studentDetails"
            style="style_et_studentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/validation_etAlpha_studentDetails"
            android:hint="@string/et_hint_name_studentDetails"/>

        <EditText
            android:id="@+id/et_rollno_studentDetails"
            style="style_et_studentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="@string/validation_etNum_studentDetails"
            android:hint="@string/et_hint_rollNo_studentDetails"/>

        <EditText
            android:id="@+id/et_class_studentDetails"
            style="style_et_studentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="@string/validation_etNum_studentDetails"
            android:hint="@string/et_hint_class_studentDetails"/>


        <Button
            android:id="@+id/btn_submit_studentDetails"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/btn_submit_studentDetails"/>





    </LinearLayout>
</FrameLayout>